<resources>
    <string name="app_name">Apex Quiz</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="welcome">"Welcome!"</string>
    <string name="login_failed">"Login failed"</string>
    <string name="registration">Registration</string>
    <string name="noLogin">Don\'t have a login? Register here!</string>
    <string name="splash">Splash Screen</string>
    <string name="intro">Apex Quiz</string>
    <string name="prompt_FirstName">First Name</string>
    <string name="prompt_LastName">Last Name</string>
    <string name="prompt_Date">Date of Birth</string>
    <string name="butRegister">Register</string>
    <string name="description">Icon</string>
    <string name="rules">RULES</string>
    <string name="rule1">For Questions 1-4, Select only 1 answer.</string>
    <string name="rule2">For Question 5, Select any or all answers.</string>
    <string name="rule3">No looking up answers!</string>
    <string name="start_quiz">Start Quiz</string>
    <string name="quest1">QUESTION 1</string>
    <string name="question1">Which of these is considered a Recon character?</string>
    <string name="submit">SUBMIT</string>
    <string name="wraith">Wraith</string>
    <string name="bloodhound">Bloodhound</string>
    <string name="lifeline">Lifeline</string>
    <string name="octane">Octane</string>
    <string name="quest2">QUESTION 2</string>
    <string name="question2">Which of these is an SMG?</string>
    <string name="mastiff">Mastiff</string>
    <string name="r99">R-99</string>
    <string name="r301">R-301</string>
    <string name="tripletake">Triple Take</string>
    <string name="quest3">QUESTION 3</string>
    <string name="question3">Which season was Revenant introduced in?</string>
    <string name="season4">Season 4</string>
    <string name="season3">Season 3</string>
    <string name="season2">Season 2</string>
    <string name="season1">Season 1</string>
    <string name="quest4">QUESTION 4</string>
    <string name="question4">What was the first Heirlooom?</string>
    <string name="hammer">Hammer</string>
    <string name="boxinggloves">Boxing Gloves</string>
    <string name="axe">Axe</string>
    <string name="kunai">Kunai</string>
    <string name="quest5">QUESTION 5</string>
    <string name="question5">What are the names of the maps in Apex?</string>
    <string name="kingscanyon">King\'s Canyon</string>
    <string name="olympus">Olympus</string>
    <string name="horizon">Horizon</string>
    <string name="worldsedge">World\'s Edge</string>
    <string name="results">RESULTS</string>
    <string name="restart">RESTART QUIZ</string>
</resources>