<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.project2.quest2">
    <TextView
        android:id="@+id/q2q"
        android:layout_width="405dp"
        android:layout_height="75dp"
        android:text="@string/question2"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.204" />

    <TextView
        android:id="@+id/q2"
        android:layout_width="183dp"
        android:layout_height="55dp"
        android:text="@string/quest2"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.053" />

    <RadioGroup
        android:id="@+id/rgq2"
        android:layout_width="303dp"
        android:layout_height="167dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/q2c1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tripletake" />

        <RadioButton
            android:id="@+id/q2c2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/r301" />

        <RadioButton
            android:id="@+id/q2c3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/r99" />

        <RadioButton
            android:id="@+id/q2c4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mastiff" />
    </RadioGroup>

    <Button
        android:id="@+id/submitq2"
        android:layout_width="176dp"
        android:layout_height="57dp"
        android:text="@string/submit"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.514"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.764" />

</androidx.constraintlayout.widget.ConstraintLayout>