<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.project2.quest4">

    <TextView
        android:id="@+id/q4q"
        android:layout_width="405dp"
        android:layout_height="75dp"
        android:text="@string/question4"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.204" />

    <TextView
        android:id="@+id/q4"
        android:layout_width="183dp"
        android:layout_height="55dp"
        android:text="@string/quest4"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.053" />

    <RadioGroup
        android:id="@+id/rgq4"
        android:layout_width="303dp"
        android:layout_height="167dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/q4c1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/kunai" />

        <RadioButton
            android:id="@+id/q4c2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/axe" />

        <RadioButton
            android:id="@+id/q4c3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/boxinggloves" />

        <RadioButton
            android:id="@+id/q4c4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hammer" />
    </RadioGroup>

    <Button
        android:id="@+id/submitq4"
        android:layout_width="176dp"
        android:layout_height="57dp"
        android:text="@string/submit"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.514"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.764" />

</androidx.constraintlayout.widget.ConstraintLayout>